# plugin-discovery

./: Cargo.toml  README.md
src/: main.rs
